# Telegram-RAG-ChatBot

./: .gitignore  README.md  main.py  pyproject.toml
core/: chatbot_llm.py  config.py  embedder.py  setup.py
handlers/: chatbot_handler.py  file_handler.py  general_handlers.py  rag_handler.py
utils/: logger.py  pdf_reader.py  prompt.py  rag_prompt.py
